Compiler/hw2/y.output
State 156 conflicts: 13 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: GlobalStatementList

    2 GlobalStatementList: GlobalStatementList GlobalStatement
    3                    | GlobalStatement

    4 GlobalStatement: PackageStmt NEWLINE
    5                | FunctionDeclStmt
    6                | NEWLINE

    7 PackageStmt: PACKAGE IDENT

    8 @1: /* empty */

    9 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN Type @1 FuncBlock

   10 @2: /* empty */

   11 FunctionDeclStmt: FuncOpen LPAREN RPAREN @2 FuncBlock

   12 FuncOpen: FUNC IDENT

   13 FuncCallStmt: IDENT LPAREN RPAREN
   14             | IDENT LPAREN ArgumentList RPAREN

   15 ArgumentList: Expression
   16             | ArgumentList COMMA Expression

   17 ParameterList: IDENT Type
   18              | ParameterList COMMA IDENT Type

   19 FuncBlock: LBRACE StatementList RBRACE

   20 ReturnStmt: RETURN
   21           | RETURN Expression

   22 Type: INT
   23     | FLOAT
   24     | STRING
   25     | BOOL

   26 Expression: UnaryExpr

   27 @3: /* empty */

   28 Expression: Expression binary_op @3 Expression

   29 UnaryExpr: PrimaryExpr
   30          | unary_op UnaryExpr

   31 binary_op: LOR
   32          | LAND
   33          | cmp_op
   34          | add_op
   35          | mul_op

   36 cmp_op: EQL
   37       | NEQ
   38       | LSS
   39       | LEQ
   40       | GTR
   41       | GEQ

   42 add_op: ADD
   43       | SUB

   44 mul_op: MUL
   45       | QUO
   46       | REM

   47 unary_op: ADD
   48         | SUB
   49         | NOT

   50 PrimaryExpr: Operand
   51            | FuncCallStmt
   52            | ConversionExpr

   53 Operand: Literal
   54        | IDENT
   55        | LPAREN Expression RPAREN

   56 Literal: INT_LIT
   57        | FLOAT_LIT
   58        | BOOL_LIT
   59        | STRING_LIT

   60 ConversionExpr: Type LPAREN Expression RPAREN

   61 Statement: DeclarationStmt NEWLINE
   62          | SimpleStmt NEWLINE
   63          | Block
   64          | IfStmt
   65          | ForStmt
   66          | SwitchStmt
   67          | CaseStmt
   68          | PrintStmt NEWLINE
   69          | ReturnStmt NEWLINE
   70          | NEWLINE

   71 SimpleStmt: AssignmentStmt
   72           | ExpressionStmt
   73           | IncDecStmt

   74 DeclarationStmt: VAR IDENT Type
   75                | VAR IDENT Type ASSIGN Expression

   76 @4: /* empty */

   77 AssignmentStmt: Expression assign_op @4 Expression

   78 assign_op: ASSIGN
   79          | ADD_ASSIGN
   80          | SUB_ASSIGN
   81          | MUL_ASSIGN
   82          | QUO_ASSIGN
   83          | REM_ASSIGN

   84 ExpressionStmt: Expression

   85 IncDecStmt: Expression INC
   86           | Expression DEC

   87 @5: /* empty */

   88 Block: LBRACE @5 StatementList RBRACE

   89 StatementList: Statement
   90              | Statement StatementList

   91 IfStmt: IF Condition Block
   92       | IF Condition Block ELSE Block
   93       | IF Condition Block ELSE IfStmt

   94 Condition: Expression

   95 ForStmt: FOR Condition Block
   96        | FOR ForClause Block

   97 ForClause: InitStmt SEMICOLON Condition SEMICOLON PostStmt

   98 InitStmt: SimpleStmt

   99 PostStmt: SimpleStmt

  100 SwitchStmt: SWITCH Expression Block

  101 @6: /* empty */

  102 CaseStmt: CASE INT_LIT @6 COLON Block
  103         | DEFAULT COLON Block

  104 PrintStmt: PRINT LPAREN Expression RPAREN
  105          | PRINTLN LPAREN Expression RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
VAR (258) 74 75
PACKAGE (259) 7
NEWLINE (260) 4 6 61 62 68 69 70
IDENT (261) 7 12 13 14 17 18 54 74 75
RETURN (262) 20 21
FUNC (263) 12
SEMICOLON (264) 97
COLON (265) 102 103
COMMA (266) 16 18
INT (267) 22
FLOAT (268) 23
BOOL (269) 25
STRING (270) 24
INC (271) 85
DEC (272) 86
GEQ (273) 41
LOR (274) 31
LAND (275) 32
EQL (276) 36
NEQ (277) 37
LSS (278) 38
LEQ (279) 39
GTR (280) 40
ASSIGN (281) 75 78
ADD_ASSIGN (282) 79
SUB_ASSIGN (283) 80
MUL_ASSIGN (284) 81
QUO_ASSIGN (285) 82
REM_ASSIGN (286) 83
IF (287) 91 92 93
ELSE (288) 92 93
FOR (289) 95 96
SWITCH (290) 100
CASE (291) 102
DEFAULT (292) 103
LBRACE (293) 19 88
RBRACE (294) 19 88
PRINT (295) 104
PRINTLN (296) 105
ADD (297) 42 47
SUB (298) 43 48
MUL (299) 44
QUO (300) 45
REM (301) 46
NOT (302) 49
LPAREN (303) 9 11 13 14 55 60 104 105
RPAREN (304) 9 11 13 14 55 60 104 105
INT_LIT (305) 56 102
FLOAT_LIT (306) 57
BOOL_LIT (307) 58
STRING_LIT (308) 59


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
Program (55)
    on left: 1, on right: 0
GlobalStatementList (56)
    on left: 2 3, on right: 1 2
GlobalStatement (57)
    on left: 4 5 6, on right: 2 3
PackageStmt (58)
    on left: 7, on right: 4
FunctionDeclStmt (59)
    on left: 9 11, on right: 5
@1 (60)
    on left: 8, on right: 9
@2 (61)
    on left: 10, on right: 11
FuncOpen (62)
    on left: 12, on right: 9 11
FuncCallStmt (63)
    on left: 13 14, on right: 51
ArgumentList (64)
    on left: 15 16, on right: 14 16
ParameterList (65)
    on left: 17 18, on right: 9 18
FuncBlock (66)
    on left: 19, on right: 9 11
ReturnStmt (67)
    on left: 20 21, on right: 69
Type (68)
    on left: 22 23 24 25, on right: 9 17 18 60 74 75
Expression (69)
    on left: 26 28, on right: 15 16 21 28 55 60 75 77 84 85 86 94 100
    104 105
@3 (70)
    on left: 27, on right: 28
UnaryExpr (71)
    on left: 29 30, on right: 26 30
binary_op (72)
    on left: 31 32 33 34 35, on right: 28
cmp_op (73)
    on left: 36 37 38 39 40 41, on right: 33
add_op (74)
    on left: 42 43, on right: 34
mul_op (75)
    on left: 44 45 46, on right: 35
unary_op (76)
    on left: 47 48 49, on right: 30
PrimaryExpr (77)
    on left: 50 51 52, on right: 29
Operand (78)
    on left: 53 54 55, on right: 50
Literal (79)
    on left: 56 57 58 59, on right: 53
ConversionExpr (80)
    on left: 60, on right: 52
Statement (81)
    on left: 61 62 63 64 65 66 67 68 69 70, on right: 89 90
SimpleStmt (82)
    on left: 71 72 73, on right: 62 98 99
DeclarationStmt (83)
    on left: 74 75, on right: 61
AssignmentStmt (84)
    on left: 77, on right: 71
@4 (85)
    on left: 76, on right: 77
assign_op (86)
    on left: 78 79 80 81 82 83, on right: 77
ExpressionStmt (87)
    on left: 84, on right: 72
IncDecStmt (88)
    on left: 85 86, on right: 73
Block (89)
    on left: 88, on right: 63 91 92 93 95 96 100 102 103
@5 (90)
    on left: 87, on right: 88
StatementList (91)
    on left: 89 90, on right: 19 88 90
IfStmt (92)
    on left: 91 92 93, on right: 64 93
Condition (93)
    on left: 94, on right: 91 92 93 95 97
ForStmt (94)
    on left: 95 96, on right: 65
ForClause (95)
    on left: 97, on right: 96
InitStmt (96)
    on left: 98, on right: 97
PostStmt (97)
    on left: 99, on right: 97
SwitchStmt (98)
    on left: 100, on right: 66
CaseStmt (99)
    on left: 102 103, on right: 67
@6 (100)
    on left: 101, on right: 102
PrintStmt (101)
    on left: 104 105, on right: 68


state 0

    0 $accept: . Program $end

    PACKAGE  shift, and go to state 1
    NEWLINE  shift, and go to state 2
    FUNC     shift, and go to state 3

    Program              go to state 4
    GlobalStatementList  go to state 5
    GlobalStatement      go to state 6
    PackageStmt          go to state 7
    FunctionDeclStmt     go to state 8
    FuncOpen             go to state 9


state 1

    7 PackageStmt: PACKAGE . IDENT

    IDENT  shift, and go to state 10


state 2

    6 GlobalStatement: NEWLINE .

    $default  reduce using rule 6 (GlobalStatement)


state 3

   12 FuncOpen: FUNC . IDENT

    IDENT  shift, and go to state 11


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


state 5

    1 Program: GlobalStatementList .
    2 GlobalStatementList: GlobalStatementList . GlobalStatement

    PACKAGE  shift, and go to state 1
    NEWLINE  shift, and go to state 2
    FUNC     shift, and go to state 3

    $default  reduce using rule 1 (Program)

    GlobalStatement   go to state 13
    PackageStmt       go to state 7
    FunctionDeclStmt  go to state 8
    FuncOpen          go to state 9


state 6

    3 GlobalStatementList: GlobalStatement .

    $default  reduce using rule 3 (GlobalStatementList)


state 7

    4 GlobalStatement: PackageStmt . NEWLINE

    NEWLINE  shift, and go to state 14


state 8

    5 GlobalStatement: FunctionDeclStmt .

    $default  reduce using rule 5 (GlobalStatement)


state 9

    9 FunctionDeclStmt: FuncOpen . LPAREN ParameterList RPAREN Type @1 FuncBlock
   11                 | FuncOpen . LPAREN RPAREN @2 FuncBlock

    LPAREN  shift, and go to state 15


state 10

    7 PackageStmt: PACKAGE IDENT .

    $default  reduce using rule 7 (PackageStmt)


state 11

   12 FuncOpen: FUNC IDENT .

    $default  reduce using rule 12 (FuncOpen)


state 12

    0 $accept: Program $end .

    $default  accept


state 13

    2 GlobalStatementList: GlobalStatementList GlobalStatement .

    $default  reduce using rule 2 (GlobalStatementList)


state 14

    4 GlobalStatement: PackageStmt NEWLINE .

    $default  reduce using rule 4 (GlobalStatement)


state 15

    9 FunctionDeclStmt: FuncOpen LPAREN . ParameterList RPAREN Type @1 FuncBlock
   11                 | FuncOpen LPAREN . RPAREN @2 FuncBlock

    IDENT   shift, and go to state 16
    RPAREN  shift, and go to state 17

    ParameterList  go to state 18


state 16

   17 ParameterList: IDENT . Type

    INT     shift, and go to state 19
    FLOAT   shift, and go to state 20
    BOOL    shift, and go to state 21
    STRING  shift, and go to state 22

    Type  go to state 23


state 17

   11 FunctionDeclStmt: FuncOpen LPAREN RPAREN . @2 FuncBlock

    $default  reduce using rule 10 (@2)

    @2  go to state 24


state 18

    9 FunctionDeclStmt: FuncOpen LPAREN ParameterList . RPAREN Type @1 FuncBlock
   18 ParameterList: ParameterList . COMMA IDENT Type

    COMMA   shift, and go to state 25
    RPAREN  shift, and go to state 26


state 19

   22 Type: INT .

    $default  reduce using rule 22 (Type)


state 20

   23 Type: FLOAT .

    $default  reduce using rule 23 (Type)


state 21

   25 Type: BOOL .

    $default  reduce using rule 25 (Type)


state 22

   24 Type: STRING .

    $default  reduce using rule 24 (Type)


state 23

   17 ParameterList: IDENT Type .

    $default  reduce using rule 17 (ParameterList)


state 24

   11 FunctionDeclStmt: FuncOpen LPAREN RPAREN @2 . FuncBlock

    LBRACE  shift, and go to state 27

    FuncBlock  go to state 28


state 25

   18 ParameterList: ParameterList COMMA . IDENT Type

    IDENT  shift, and go to state 29


state 26

    9 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN . Type @1 FuncBlock

    INT     shift, and go to state 19
    FLOAT   shift, and go to state 20
    BOOL    shift, and go to state 21
    STRING  shift, and go to state 22

    Type  go to state 30


state 27

   19 FuncBlock: LBRACE . StatementList RBRACE

    VAR         shift, and go to state 31
    NEWLINE     shift, and go to state 32
    IDENT       shift, and go to state 33
    RETURN      shift, and go to state 34
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    IF          shift, and go to state 35
    FOR         shift, and go to state 36
    SWITCH      shift, and go to state 37
    CASE        shift, and go to state 38
    DEFAULT     shift, and go to state 39
    LBRACE      shift, and go to state 40
    PRINT       shift, and go to state 41
    PRINTLN     shift, and go to state 42
    ADD         shift, and go to state 43
    SUB         shift, and go to state 44
    NOT         shift, and go to state 45
    LPAREN      shift, and go to state 46
    INT_LIT     shift, and go to state 47
    FLOAT_LIT   shift, and go to state 48
    BOOL_LIT    shift, and go to state 49
    STRING_LIT  shift, and go to state 50

    FuncCallStmt     go to state 51
    ReturnStmt       go to state 52
    Type             go to state 53
    Expression       go to state 54
    UnaryExpr        go to state 55
    unary_op         go to state 56
    PrimaryExpr      go to state 57
    Operand          go to state 58
    Literal          go to state 59
    ConversionExpr   go to state 60
    Statement        go to state 61
    SimpleStmt       go to state 62
    DeclarationStmt  go to state 63
    AssignmentStmt   go to state 64
    ExpressionStmt   go to state 65
    IncDecStmt       go to state 66
    Block            go to state 67
    StatementList    go to state 68
    IfStmt           go to state 69
    ForStmt          go to state 70
    SwitchStmt       go to state 71
    CaseStmt         go to state 72
    PrintStmt        go to state 73


state 28

   11 FunctionDeclStmt: FuncOpen LPAREN RPAREN @2 FuncBlock .

    $default  reduce using rule 11 (FunctionDeclStmt)


state 29

   18 ParameterList: ParameterList COMMA IDENT . Type

    INT     shift, and go to state 19
    FLOAT   shift, and go to state 20
    BOOL    shift, and go to state 21
    STRING  shift, and go to state 22

    Type  go to state 74


state 30

    9 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN Type . @1 FuncBlock

    $default  reduce using rule 8 (@1)

    @1  go to state 75


state 31

   74 DeclarationStmt: VAR . IDENT Type
   75                | VAR . IDENT Type ASSIGN Expression

    IDENT  shift, and go to state 76


state 32

   70 Statement: NEWLINE .

    $default  reduce using rule 70 (Statement)


state 33

   13 FuncCallStmt: IDENT . LPAREN RPAREN
   14             | IDENT . LPAREN ArgumentList RPAREN
   54 Operand: IDENT .

    LPAREN  shift, and go to state 77

    $default  reduce using rule 54 (Operand)


state 34

   20 ReturnStmt: RETURN .
   21           | RETURN . Expression

    IDENT       shift, and go to state 33
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    ADD         shift, and go to state 43
    SUB         shift, and go to state 44
    NOT         shift, and go to state 45
    LPAREN      shift, and go to state 46
    INT_LIT     shift, and go to state 47
    FLOAT_LIT   shift, and go to state 48
    BOOL_LIT    shift, and go to state 49
    STRING_LIT  shift, and go to state 50

    $default  reduce using rule 20 (ReturnStmt)

    FuncCallStmt    go to state 51
    Type            go to state 53
    Expression      go to state 78
    UnaryExpr       go to state 55
    unary_op        go to state 56
    PrimaryExpr     go to state 57
    Operand         go to state 58
    Literal         go to state 59
    ConversionExpr  go to state 60


state 35

   91 IfStmt: IF . Condition Block
   92       | IF . Condition Block ELSE Block
   93       | IF . Condition Block ELSE IfStmt

    IDENT       shift, and go to state 33
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    ADD         shift, and go to state 43
    SUB         shift, and go to state 44
    NOT         shift, and go to state 45
    LPAREN      shift, and go to state 46
    INT_LIT     shift, and go to state 47
    FLOAT_LIT   shift, and go to state 48
    BOOL_LIT    shift, and go to state 49
    STRING_LIT  shift, and go to state 50

    FuncCallStmt    go to state 51
    Type            go to state 53
    Expression      go to state 79
    UnaryExpr       go to state 55
    unary_op        go to state 56
    PrimaryExpr     go to state 57
    Operand         go to state 58
    Literal         go to state 59
    ConversionExpr  go to state 60
    Condition       go to state 80


state 36

   95 ForStmt: FOR . Condition Block
   96        | FOR . ForClause Block

    IDENT       shift, and go to state 33
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    ADD         shift, and go to state 43
    SUB         shift, and go to state 44
    NOT         shift, and go to state 45
    LPAREN      shift, and go to state 46
    INT_LIT     shift, and go to state 47
    FLOAT_LIT   shift, and go to state 48
    BOOL_LIT    shift, and go to state 49
    STRING_LIT  shift, and go to state 50

    FuncCallStmt    go to state 51
    Type            go to state 53
    Expression      go to state 81
    UnaryExpr       go to state 55
    unary_op        go to state 56
    PrimaryExpr     go to state 57
    Operand         go to state 58
    Literal         go to state 59
    ConversionExpr  go to state 60
    SimpleStmt      go to state 82
    AssignmentStmt  go to state 64
    ExpressionStmt  go to state 65
    IncDecStmt      go to state 66
    Condition       go to state 83
    ForClause       go to state 84
    InitStmt        go to state 85


state 37

  100 SwitchStmt: SWITCH . Expression Block

    IDENT       shift, and go to state 33
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    ADD         shift, and go to state 43
    SUB         shift, and go to state 44
    NOT         shift, and go to state 45
    LPAREN      shift, and go to state 46
    INT_LIT     shift, and go to state 47
    FLOAT_LIT   shift, and go to state 48
    BOOL_LIT    shift, and go to state 49
    STRING_LIT  shift, and go to state 50

    FuncCallStmt    go to state 51
    Type            go to state 53
    Expression      go to state 86
    UnaryExpr       go to state 55
    unary_op        go to state 56
    PrimaryExpr     go to state 57
    Operand         go to state 58
    Literal         go to state 59
    ConversionExpr  go to state 60


state 38

  102 CaseStmt: CASE . INT_LIT @6 COLON Block

    INT_LIT  shift, and go to state 87


state 39

  103 CaseStmt: DEFAULT . COLON Block

    COLON  shift, and go to state 88


state 40

   88 Block: LBRACE . @5 StatementList RBRACE

    $default  reduce using rule 87 (@5)

    @5  go to state 89


state 41

  104 PrintStmt: PRINT . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 90


state 42

  105 PrintStmt: PRINTLN . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 91


state 43

   47 unary_op: ADD .

    $default  reduce using rule 47 (unary_op)


state 44

   48 unary_op: SUB .

    $default  reduce using rule 48 (unary_op)


state 45

   49 unary_op: NOT .

    $default  reduce using rule 49 (unary_op)


state 46

   55 Operand: LPAREN . Expression RPAREN

    IDENT       shift, and go to state 33
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    ADD         shift, and go to state 43
    SUB         shift, and go to state 44
    NOT         shift, and go to state 45
    LPAREN      shift, and go to state 46
    INT_LIT     shift, and go to state 47
    FLOAT_LIT   shift, and go to state 48
    BOOL_LIT    shift, and go to state 49
    STRING_LIT  shift, and go to state 50

    FuncCallStmt    go to state 51
    Type            go to state 53
    Expression      go to state 92
    UnaryExpr       go to state 55
    unary_op        go to state 56
    PrimaryExpr     go to state 57
    Operand         go to state 58
    Literal         go to state 59
    ConversionExpr  go to state 60


state 47

   56 Literal: INT_LIT .

    $default  reduce using rule 56 (Literal)


state 48

   57 Literal: FLOAT_LIT .

    $default  reduce using rule 57 (Literal)


state 49

   58 Literal: BOOL_LIT .

    $default  reduce using rule 58 (Literal)


state 50

   59 Literal: STRING_LIT .

    $default  reduce using rule 59 (Literal)


state 51

   51 PrimaryExpr: FuncCallStmt .

    $default  reduce using rule 51 (PrimaryExpr)


state 52

   69 Statement: ReturnStmt . NEWLINE

    NEWLINE  shift, and go to state 93


state 53

   60 ConversionExpr: Type . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 94


state 54

   28 Expression: Expression . binary_op @3 Expression
   77 AssignmentStmt: Expression . assign_op @4 Expression
   84 ExpressionStmt: Expression .
   85 IncDecStmt: Expression . INC
   86           | Expression . DEC

    INC         shift, and go to state 95
    DEC         shift, and go to state 96
    GEQ         shift, and go to state 97
    LOR         shift, and go to state 98
    LAND        shift, and go to state 99
    EQL         shift, and go to state 100
    NEQ         shift, and go to state 101
    LSS         shift, and go to state 102
    LEQ         shift, and go to state 103
    GTR         shift, and go to state 104
    ASSIGN      shift, and go to state 105
    ADD_ASSIGN  shift, and go to state 106
    SUB_ASSIGN  shift, and go to state 107
    MUL_ASSIGN  shift, and go to state 108
    QUO_ASSIGN  shift, and go to state 109
    REM_ASSIGN  shift, and go to state 110
    ADD         shift, and go to state 111
    SUB         shift, and go to state 112
    MUL         shift, and go to state 113
    QUO         shift, and go to state 114
    REM         shift, and go to state 115

    $default  reduce using rule 84 (ExpressionStmt)

    binary_op  go to state 116
    cmp_op     go to state 117
    add_op     go to state 118
    mul_op     go to state 119
    assign_op  go to state 120


state 55

   26 Expression: UnaryExpr .

    $default  reduce using rule 26 (Expression)


state 56

   30 UnaryExpr: unary_op . UnaryExpr

    IDENT       shift, and go to state 33
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    ADD         shift, and go to state 43
    SUB         shift, and go to state 44
    NOT         shift, and go to state 45
    LPAREN      shift, and go to state 46
    INT_LIT     shift, and go to state 47
    FLOAT_LIT   shift, and go to state 48
    BOOL_LIT    shift, and go to state 49
    STRING_LIT  shift, and go to state 50

    FuncCallStmt    go to state 51
    Type            go to state 53
    UnaryExpr       go to state 121
    unary_op        go to state 56
    PrimaryExpr     go to state 57
    Operand         go to state 58
    Literal         go to state 59
    ConversionExpr  go to state 60


state 57

   29 UnaryExpr: PrimaryExpr .

    $default  reduce using rule 29 (UnaryExpr)


state 58

   50 PrimaryExpr: Operand .

    $default  reduce using rule 50 (PrimaryExpr)


state 59

   53 Operand: Literal .

    $default  reduce using rule 53 (Operand)


state 60

   52 PrimaryExpr: ConversionExpr .

    $default  reduce using rule 52 (PrimaryExpr)


state 61

   89 StatementList: Statement .
   90              | Statement . StatementList

    VAR         shift, and go to state 31
    NEWLINE     shift, and go to state 32
    IDENT       shift, and go to state 33
    RETURN      shift, and go to state 34
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    IF          shift, and go to state 35
    FOR         shift, and go to state 36
    SWITCH      shift, and go to state 37
    CASE        shift, and go to state 38
    DEFAULT     shift, and go to state 39
    LBRACE      shift, and go to state 40
    PRINT       shift, and go to state 41
    PRINTLN     shift, and go to state 42
    ADD         shift, and go to state 43
    SUB         shift, and go to state 44
    NOT         shift, and go to state 45
    LPAREN      shift, and go to state 46
    INT_LIT     shift, and go to state 47
    FLOAT_LIT   shift, and go to state 48
    BOOL_LIT    shift, and go to state 49
    STRING_LIT  shift, and go to state 50

    $default  reduce using rule 89 (StatementList)

    FuncCallStmt     go to state 51
    ReturnStmt       go to state 52
    Type             go to state 53
    Expression       go to state 54
    UnaryExpr        go to state 55
    unary_op         go to state 56
    PrimaryExpr      go to state 57
    Operand          go to state 58
    Literal          go to state 59
    ConversionExpr   go to state 60
    Statement        go to state 61
    SimpleStmt       go to state 62
    DeclarationStmt  go to state 63
    AssignmentStmt   go to state 64
    ExpressionStmt   go to state 65
    IncDecStmt       go to state 66
    Block            go to state 67
    StatementList    go to state 122
    IfStmt           go to state 69
    ForStmt          go to state 70
    SwitchStmt       go to state 71
    CaseStmt         go to state 72
    PrintStmt        go to state 73


state 62

   62 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 123


state 63

   61 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 124


state 64

   71 SimpleStmt: AssignmentStmt .

    $default  reduce using rule 71 (SimpleStmt)


state 65

   72 SimpleStmt: ExpressionStmt .

    $default  reduce using rule 72 (SimpleStmt)


state 66

   73 SimpleStmt: IncDecStmt .

    $default  reduce using rule 73 (SimpleStmt)


state 67

   63 Statement: Block .

    $default  reduce using rule 63 (Statement)


state 68

   19 FuncBlock: LBRACE StatementList . RBRACE

    RBRACE  shift, and go to state 125


state 69

   64 Statement: IfStmt .

    $default  reduce using rule 64 (Statement)


state 70

   65 Statement: ForStmt .

    $default  reduce using rule 65 (Statement)


state 71

   66 Statement: SwitchStmt .

    $default  reduce using rule 66 (Statement)


state 72

   67 Statement: CaseStmt .

    $default  reduce using rule 67 (Statement)


state 73

   68 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 126


state 74

   18 ParameterList: ParameterList COMMA IDENT Type .

    $default  reduce using rule 18 (ParameterList)


state 75

    9 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN Type @1 . FuncBlock

    LBRACE  shift, and go to state 27

    FuncBlock  go to state 127


state 76

   74 DeclarationStmt: VAR IDENT . Type
   75                | VAR IDENT . Type ASSIGN Expression

    INT     shift, and go to state 19
    FLOAT   shift, and go to state 20
    BOOL    shift, and go to state 21
    STRING  shift, and go to state 22

    Type  go to state 128


state 77

   13 FuncCallStmt: IDENT LPAREN . RPAREN
   14             | IDENT LPAREN . ArgumentList RPAREN

    IDENT       shift, and go to state 33
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    ADD         shift, and go to state 43
    SUB         shift, and go to state 44
    NOT         shift, and go to state 45
    LPAREN      shift, and go to state 46
    RPAREN      shift, and go to state 129
    INT_LIT     shift, and go to state 47
    FLOAT_LIT   shift, and go to state 48
    BOOL_LIT    shift, and go to state 49
    STRING_LIT  shift, and go to state 50

    FuncCallStmt    go to state 51
    ArgumentList    go to state 130
    Type            go to state 53
    Expression      go to state 131
    UnaryExpr       go to state 55
    unary_op        go to state 56
    PrimaryExpr     go to state 57
    Operand         go to state 58
    Literal         go to state 59
    ConversionExpr  go to state 60


state 78

   21 ReturnStmt: RETURN Expression .
   28 Expression: Expression . binary_op @3 Expression

    GEQ   shift, and go to state 97
    LOR   shift, and go to state 98
    LAND  shift, and go to state 99
    EQL   shift, and go to state 100
    NEQ   shift, and go to state 101
    LSS   shift, and go to state 102
    LEQ   shift, and go to state 103
    GTR   shift, and go to state 104
    ADD   shift, and go to state 111
    SUB   shift, and go to state 112
    MUL   shift, and go to state 113
    QUO   shift, and go to state 114
    REM   shift, and go to state 115

    $default  reduce using rule 21 (ReturnStmt)

    binary_op  go to state 116
    cmp_op     go to state 117
    add_op     go to state 118
    mul_op     go to state 119


state 79

   28 Expression: Expression . binary_op @3 Expression
   94 Condition: Expression .

    GEQ   shift, and go to state 97
    LOR   shift, and go to state 98
    LAND  shift, and go to state 99
    EQL   shift, and go to state 100
    NEQ   shift, and go to state 101
    LSS   shift, and go to state 102
    LEQ   shift, and go to state 103
    GTR   shift, and go to state 104
    ADD   shift, and go to state 111
    SUB   shift, and go to state 112
    MUL   shift, and go to state 113
    QUO   shift, and go to state 114
    REM   shift, and go to state 115

    $default  reduce using rule 94 (Condition)

    binary_op  go to state 116
    cmp_op     go to state 117
    add_op     go to state 118
    mul_op     go to state 119


state 80

   91 IfStmt: IF Condition . Block
   92       | IF Condition . Block ELSE Block
   93       | IF Condition . Block ELSE IfStmt

    LBRACE  shift, and go to state 40

    Block  go to state 132


state 81

   28 Expression: Expression . binary_op @3 Expression
   77 AssignmentStmt: Expression . assign_op @4 Expression
   84 ExpressionStmt: Expression .
   85 IncDecStmt: Expression . INC
   86           | Expression . DEC
   94 Condition: Expression .

    INC         shift, and go to state 95
    DEC         shift, and go to state 96
    GEQ         shift, and go to state 97
    LOR         shift, and go to state 98
    LAND        shift, and go to state 99
    EQL         shift, and go to state 100
    NEQ         shift, and go to state 101
    LSS         shift, and go to state 102
    LEQ         shift, and go to state 103
    GTR         shift, and go to state 104
    ASSIGN      shift, and go to state 105
    ADD_ASSIGN  shift, and go to state 106
    SUB_ASSIGN  shift, and go to state 107
    MUL_ASSIGN  shift, and go to state 108
    QUO_ASSIGN  shift, and go to state 109
    REM_ASSIGN  shift, and go to state 110
    ADD         shift, and go to state 111
    SUB         shift, and go to state 112
    MUL         shift, and go to state 113
    QUO         shift, and go to state 114
    REM         shift, and go to state 115

    LBRACE    reduce using rule 94 (Condition)
    $default  reduce using rule 84 (ExpressionStmt)

    binary_op  go to state 116
    cmp_op     go to state 117
    add_op     go to state 118
    mul_op     go to state 119
    assign_op  go to state 120


state 82

   98 InitStmt: SimpleStmt .

    $default  reduce using rule 98 (InitStmt)


state 83

   95 ForStmt: FOR Condition . Block

    LBRACE  shift, and go to state 40

    Block  go to state 133


state 84

   96 ForStmt: FOR ForClause . Block

    LBRACE  shift, and go to state 40

    Block  go to state 134


state 85

   97 ForClause: InitStmt . SEMICOLON Condition SEMICOLON PostStmt

    SEMICOLON  shift, and go to state 135


state 86

   28 Expression: Expression . binary_op @3 Expression
  100 SwitchStmt: SWITCH Expression . Block

    GEQ     shift, and go to state 97
    LOR     shift, and go to state 98
    LAND    shift, and go to state 99
    EQL     shift, and go to state 100
    NEQ     shift, and go to state 101
    LSS     shift, and go to state 102
    LEQ     shift, and go to state 103
    GTR     shift, and go to state 104
    LBRACE  shift, and go to state 40
    ADD     shift, and go to state 111
    SUB     shift, and go to state 112
    MUL     shift, and go to state 113
    QUO     shift, and go to state 114
    REM     shift, and go to state 115

    binary_op  go to state 116
    cmp_op     go to state 117
    add_op     go to state 118
    mul_op     go to state 119
    Block      go to state 136


state 87

  102 CaseStmt: CASE INT_LIT . @6 COLON Block

    $default  reduce using rule 101 (@6)

    @6  go to state 137


state 88

  103 CaseStmt: DEFAULT COLON . Block

    LBRACE  shift, and go to state 40

    Block  go to state 138


state 89

   88 Block: LBRACE @5 . StatementList RBRACE

    VAR         shift, and go to state 31
    NEWLINE     shift, and go to state 32
    IDENT       shift, and go to state 33
    RETURN      shift, and go to state 34
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    IF          shift, and go to state 35
    FOR         shift, and go to state 36
    SWITCH      shift, and go to state 37
    CASE        shift, and go to state 38
    DEFAULT     shift, and go to state 39
    LBRACE      shift, and go to state 40
    PRINT       shift, and go to state 41
    PRINTLN     shift, and go to state 42
    ADD         shift, and go to state 43
    SUB         shift, and go to state 44
    NOT         shift, and go to state 45
    LPAREN      shift, and go to state 46
    INT_LIT     shift, and go to state 47
    FLOAT_LIT   shift, and go to state 48
    BOOL_LIT    shift, and go to state 49
    STRING_LIT  shift, and go to state 50
